# Carcassonne

./: .gitignore  LICENSE  README.md  README_ALGORITHM.md  README_GNN.md  README_STAR_MINIMAX.md  carcassonne_train.py  game_stats.py  game_visualizer.py  requirements.txt  search_depth_analysis.py  self_play_worker.py  setup.py
agents/: carcassonne_agent.py  carcassonne_gnn_agent.py  mcts.py  mcts_ml_agent.py
carcassonne/: carcassonne_game_state.py  carcassonne_visualiser.py
carcassonne/tests/: city_util_test.py  meeple_util_test.py  points_collector_test.py  road_util_test.py
carcassonne/utils/: points_collector.py  road_util.py  state_updater.py  tile_position_finder.py
carcassonne_cpp/: CMakeLists.txt
carcassonne_cpp/include/carcassonne/: action_util.h  actions.h  city_util.h  connection.h  coordinate.h  farm_util.h  game_state.h  graph_features.h  meeple_position.h  meeple_util.h  points_collector.h  possible_move_finder.h  road_util.h  side_modification_util.h  state_updater.h  structures.h  tile.h  tile_fitter.h  tile_position_finder.h  tile_sets.h  types.h
carcassonne_cpp/src/: bindings.cpp  game_state.cpp
carcassonne_cpp/src/tile_sets/: base_deck.cpp  inns_and_cathedrals_deck.cpp  the_river_deck.cpp
carcassonne_engine/: __init__.py
games/: carcassonne_game.py  carcassonne_game_state.py
utils/: experiment.py  utils.py
